# hack_digital_transformation

./: .dvcignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  add_universal_imports.py  docker-compose.yml  dvc.yaml  job_config.yaml  params.yaml  pyproject.toml  requirements.txt  setup.py  test_geoclip_model.py
.dvc/: config
.github/workflows/: ci-checks.yml  ci.yml
configs/: README.md  config.yaml
full-stack/: .dockerignore  docker-compose.yml
full-stack/AuthService/: Dockerfile  auth.py
full-stack/DB/: Dockerfile
full-stack/DB/init/: 01_create_users_table.sql  01_init_tables.sql.sql  02_create_user_photos_table.sql  03_requests.sql  README.md
full-stack/FastAPI/: Dockerfile  main.py
full-stack/PhotoUploadService/: Dockerfile  photo_upload.py  requirements.txt
full-stack/ngnix/: Dockerfile  README.md  chat-demo.html  login.html  login.js  logout.js  nginx.conf  register.html  register.js  styles.css  workbench.html  workbench.js
notebooks/: 01_test_geoClip.ipynb  README.md
notebooks/1_data_exploration/: 1_1_download_data.ipynb  1_2_prepare_data.ipynb  1_3_download_moscow.ipynb
notebooks/2_model_training/: 2_1_train_optuna.ipynb  2_2_main_model.ipynb  2_3_test_geoclip.ipynb  2_4_train_model_geoclip.ipynb
scripts/: README.md  setup_environment.sh
src/: __init__.py
src/api/: __init__.py  app.py
src/data/: database_builder.py  datasets.py  faiss_indexer.py  make_dataset.py  prepare_data.py
src/engine/: main.py  optuna_optimize.py
src/geo/: __init__.py  download_images.py  geocoder.py
src/models/: OCR_model.py  __init__.py  cv_model.py  evaluate.py  feature_extractor.py  loss_function.py  metrics.py  train.py  train_faiss_geoclip.py  train_geoclip_model.py  trainer.py
src/sql_scripts/: README.md
src/tasks/: worker.py
src/utils/: __init__.py  config.py  create_metadata_from_json.py  monitor_database.py  path_resolver.py  s3.py  s3_optimize.py  useful_functions.py  zip.py
src/visualization/: visualize.py
tests/: quick_test.py  test_data.py  test_faiss_indexer.py  test_feature_extractor.py  test_functional.py  test_models.py  test_s3_manager.py  test_search.py  test_units.py
