[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hack_digital_transformation"
version = "0.1.0"
description = "Разработка полноценного MVP продукта для определения местоположения по фотографиям с собственным сайтом для работы с пользователем"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "dvc>=2.0.0",
    "fastapi>=0.85.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "jupyter>=1.0.0",
]
production = [
    "gunicorn>=20.0.0",
    "uvicorn>=0.20.0",
    "fastapi>=0.85.0",
]

[tool.uv]
dev-dependencies = ["pytest", "black", "isort", "jupyter"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
