[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hack_digital_transformation"
version = "0.1.0"
description = "Разработка полноценного MVP продукта для определения местоположения по фотографиям с собственным сайтом для работы с пользователем"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "boto3>=1.26.0",
    "mlflow>=2.0.0",
    "fastapi>=0.85.0",
    "uvicorn>=0.20.0",
    "mypy_boto3_s3>=1.26.0",
    "geoclip>=0.2.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "faiss-cpu>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=5.0.0",
    "flake8-nb>=0.5.1",
    "black>=22.0.0",
    "black[jupyter]>=22.0.0",
    "isort>=5.10.0",
    "nbstripout>=0.6.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
]
production = [
    "gunicorn>=20.0.0",
    "uvicorn>=0.20.0",
    "fastapi>=0.85.0",
]

[tool.uv]
dev-dependencies = ["pytest", "black", "isort", "ruff", "jupyter"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?|\.ipynb$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 120
select = [
    "E", "W", "F", "I", "C", "B", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B0", "A", "C4", "T10", "EXE", "ISC", "ICN", "G", "INP", "PIE", "PYI", "PT", "RUF"
]
extend-ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # Missing docstrings
]
target-version = "py311"

[tool.flake8]
max-line-length = 120
ignore = [
    "E203",  # Whitespace before ':'
    "E266",  # Too many leading '#' for block comment
    "E501",  # Line too long (handled by black)
    "W503",  # Line break occurred before a binary operator
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # Missing docstrings
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "node_modules",
]
max-complexity = 10
